# Stm32N6_Platform

./: .gitignore  AGENTS.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: Doxyfile
src/: CMakeLists.txt
src/_cmake/: toolchain.cmake
src/_cmake/ld_script/: STM32N657X0HXQ_AXISRAM2_fsbl.ld
src/app/: CMakeLists.txt  cmake_install.cmake
src/app/DevM/: CMakeLists.txt
src/app/DevM/inc/: DevM.h  DevM_PostOS.h  DevM_PreOS.h  DevM_Runtime.h
src/app/DevM/src/: DevM.c  DevM_PostOS.c  DevM_PreOS.c  DevM_Runtime.c
src/app/SysM/: CMakeLists.txt
src/app/SysM/inc/: SysM.h
src/app/SysM/src/: SysM.c
src/app/test_swc/: CMakeLists.txt  cmake_install.cmake
src/app/test_swc/inc/: test_swc.h
src/app/test_swc/src/: test_swc.c
src/bsw/: CMakeLists.txt  cmake_install.cmake
src/bsw/infra/: CMakeLists.txt  cmake_install.cmake
src/bsw/infra/inc/: stm32n6xx.h
src/bsw/infra/src/: startup_stm32n657x0hxq.s  system_stm32n6xx_fsbl.c
src/bsw/uart_dma/: CMakeLists.txt
src/bsw/uart_dma/inc/: UartDma.h
src/bsw/uart_dma/src/: UartDma.c
src/cfg/: CMakeLists.txt  cmake_install.cmake
src/cfg/inc/: FreeRTOSConfig.h  cfg_logger.h  proj_cfg.h
src/libs/: CMakeLists.txt  cmake_install.cmake
src/libs/CMSIS/: CMakeLists.txt
src/libs/CMSIS/Device/ST/STM32N6xx/Include/: stm32n6xx.h
src/libs/CMSIS/Device/ST/STM32N6xx/Source/Templates/: system_stm32n6xx_s.c
src/libs/CMSIS/Include/: cachel1_armv7.h
src/libs/HAL_Drv/: CMakeLists.txt  cmake_install.cmake
src/libs/HAL_Drv/Inc/: stm32n6xx_ll_bus.h  stm32n6xx_ll_usart.h
src/libs/HAL_Drv/Src/: stm32n6xx_ll_rcc.c
src/middleware/: CMakeLists.txt  cmake_install.cmake
src/middleware/logger/: CMakeLists.txt
src/middleware/logger/inc/: logger.h  logger_cfg.h
src/middleware/logger/src/: logger.c
src/os/: CMakeLists.txt  cmake_install.cmake
tools/: debug.jdebug
tools/install/: setup.bat  setup.sh
